compiler/tests/success/common/bug_483.jazz
inline fn f(reg u32 j) {
    while (j < 1) {
        j += 1;
    }
}

export
fn main (reg u32 i) {
    while (i < 1) {
        f(i);
        i += 1;
    }
}
