compiler/tests/fail/evaluator/x86-64/arity.jazz
inline
fn f(reg u64 x) {}

exec f()
